# demistificirani_cpp

./: CMakeLists.txt  README.md  brojevi.txt  koeficjenti.txt  main.cpp  str_160_sortiranje_niza.cpp  str_163_bezopasan_primjer_nedozvoljenih_indeksa.cpp  str_167_rjesavanje_sustava_gaussovim_postupkom.cpp
poglavlje_4/: str_160_sortiranje_niza.cpp  str_167_rjesavanje_sustava_gaussovim_postupkom.cpp  str_180_sortiranje_niza_vector.cpp  str_184_string.cpp  str_189_iteratori.cpp
poglavlje_4_nizovi_podataka/: str_160_sortiranje_niza.cpp  str_167_rjesavanje_sustava_gaussovim_postupkom.cpp  str_180_sortiranje_niza_vector.cpp  str_189_iteratori.cpp
poglavlje_5/: str_196_zadaci.cpp  str_215_dodaj_clan_u_niz.cpp
poglavlje_5_pokazivaci_i_reference/: str_203_karte_kod_igraca.cpp  str_217_zadatak.cpp  str_226_plus_primjeri_dinamicka_alokacija.cpp
poglavlje_6_jednostavni_korisnicki_definirani_tipovi/: str_231_primjer_enum.cpp  str_236_primjer_struct.cpp  str_245_program_za_izracunavanje_izraza.cpp  str_250_bitovni_operatori.cpp
poglavlje_7_funkcije/: funk1.cpp  funk1.h  funk2.cpp  funk2.h  str_263_inicijalni_primjer.cpp  str_265_deklaracija_funkcija_u_datotekama_zaglavlja.cpp  str_271_parametri_funkcije.cpp  str_275_realni_korjeni.cpp  str_277_pokazivac_kao_argument.cpp  str_283_promjena_pokazivaca_unutar_funkcije.cpp  str_287_promjeni_zaporku.cpp  str_289_nizovi_kao_argumenti.cpp  str_293_ispisi_matricu.cpp  str_294_podrazumjevni_argumenti.cpp  str_296_initializer_list.cpp  str_299_varijabilni_argumenti.cpp  str_303_spoji_u_camel_case.cpp  str_304_primjer_vracanja_dinamicki_alocirane_varijable.cpp  str_308_void_zvjezdica_kao_parametrar.cpp  str_312_primjer_hvatanja_iznimke.cpp  str_316_globalne_varijable_primjeri.cpp  str_318_static_unutar_funkcije.cpp  str_325_mocnica.cpp  str_329_ispisi_sadrzaj_kazala.cpp  str_331_definiranje_konstante_pi.cpp  str_334_usporedba_osoba.cpp  str_337_racunanje_integrala.cpp  str_341_funkcija_main.cpp  str_345_polarne_koordinate.cpp  str_351_funkcija_exit.cpp  str_353_template_kvadrat.cpp  str_357_primjer_decltype.cpp  str_369_izracunavanje_izraza_v2.cpp
poglavlje_8_klase_i_objekti/: str_379_definicija_klase.cpp  str_382_klasa_vektor.cpp  str_387_rodna_osoba.cpp  str_390_pristup.cpp  str_393_vektor_i_matrica.cpp  str_395_zadatak_udaljenost_pravac_tocka.cpp  str_397_konstruktor.cpp  str_401_klasa_tablica.cpp  str_410_podrazumijevni_konstruktor.cpp  str_415_tablica_bez_konstruktora_kopije.cpp  str_425_prava_pristupa_konst_i_dest.cpp  str_430_globalni_i_staticki_clanovi.cpp  str_434_konstantni_funkcijski_clanovi.cpp  str_439_primjer_za_volatile.cpp  str_440_static.cpp  str_448_scope_klase.cpp  str_451_memorijski_alokator.cpp  str_455_pokazivac_na_clan_klase.cpp  str_465_privremeni_objekti.cpp  str_476_tablica_2_0.cpp
poglavlje_9_nasljedivanje_i_hijerarhija_klasa/: str_496_graficki_objekt.cpp  str_503_vezana_lista.cpp  str_507_osnovna_vs_izvedena.cpp  str_510_prava_pristupa.cpp  str_529_standardne_pretvorbe.cpp  str_533_razlika_nasljedivanja_i_preopterecivanja.cpp  str_535_klase_kao_argumenti_funkcija.cpp  str_538_korisnicki_definirane_pretvorbe.cpp  str_544_virtualni_funkcijski_clanovi.cpp  str_560_virtualne_osnovne_klase.cpp  str_566_veliki_primjer_logiranje.cpp
