cmake_minimum_required(VERSION 3.25)
project(demistificirani_cpp)

set(CMAKE_CXX_STANDARD 17)

# add_executable(demistificirani_cpp main.cpp poglavlje_4_nizovi_podataka/str_160_sortiranje_niza.cpp)
#add_executable(demistificirani_cpp poglavlje_4_nizovi_podataka/str_163_bezopasan_primjer_nedozvoljenih_indeksa.cpp)
#add_executable(demistificirani_cpp poglavlje_4_nizovi_podataka/str_167_rjesavanje_sustava_gaussovim_postupkom.cpp)
#add_executable(demistificirani_cpp poglavlje_4_nizovi_podataka/str_180_sortiranje_niza_vector.cpp)
#add_executable(demistificirani_cpp poglavlje_4_nizovi_podataka/str_184_string.cpp)
#add_executable(demistificirani_cpp poglavlje_4_nizovi_podataka/str_189_iteratori.cpp)
#add_executable(demistificirani_cpp poglavlje_5_pokazivaci_i_reference/str_196_zadaci.cpp)
#add_executable(demistificirani_cpp poglavlje_5_pokazivaci_i_reference/str_203_karte_kod_igraca.cpp)
#add_executable(demistificirani_cpp poglavlje_5_pokazivaci_i_reference/str_215_dodaj_clan_u_niz.cpp)
#add_executable(demistificirani_cpp poglavlje_5_pokazivaci_i_reference/str_217_zadatak.cpp)
#add_executable(demistificirani_cpp poglavlje_5_pokazivaci_i_reference/str_226_plus_primjeri_dinamicka_alokacija.cpp)
#add_executable(demistificirani_cpp poglavlje_6_jednostavni_korisnicki_definirani_tipovi/str_231_primjer_enum.cpp)
#add_executable(demistificirani_cpp poglavlje_6_jednostavni_korisnicki_definirani_tipovi/str_236_primjer_struct.cpp)
#add_executable(demistificirani_cpp poglavlje_6_jednostavni_korisnicki_definirani_tipovi/str_245_program_za_izracunavanje_izraza.cpp)
#add_executable(demistificirani_cpp poglavlje_6_jednostavni_korisnicki_definirani_tipovi/str_250_bitovni_operatori.cpp poglavlje_7_funkcije/str_263_inicijalni_primjer.cpp)
#add_executable(demistificirani_cpp poglavlje_7_funkcije/str_263_inicijalni_primjer.cpp)
#add_executable(demistificirani_cpp poglavlje_7_funkcije/str_265_deklaracija_funkcija_u_datotekama_zaglavlja.cpp poglavlje_7_funkcije/funk1.cpp poglavlje_7_funkcije/funk2.cpp poglavlje_7_funkcije/funk1.h poglavlje_7_funkcije/funk2.h)
#add_executable(demistificirani_cpp poglavlje_7_funkcije/str_271_parametri_funkcije.cpp)
#add_executable(demistificirani_cpp poglavlje_7_funkcije/str_275_realni_korjeni.cpp)
#add_executable(demistificirani_cpp poglavlje_7_funkcije/str_277_pokazivac_kao_argument.cpp)
#add_executable(demistificirani_cpp poglavlje_7_funkcije/str_283_promjena_pokazivaca_unutar_funkcije.cpp)
add_executable(demistificirani_cpp poglavlje_7_funkcije/str_337_racunanje_integrala.cpp)